--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
     <!-- WebSocket 需要Servlet3.0 需要web.xml 3.0及以上，并要配置此 -->
-    <!--<absolute-ordering />-->
+    <absolute-ordering />
     <context-param>
         <param-name>webAppRootKey</param-name>
         <param-value>haoyan.root</param-value>
