添加socket监听相关配置

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,9 @@
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>cn.tommyyang.haoyan.socket.ReceiveSocketListener</listener-class>
+    </listener>
 
     <servlet>
         <servlet-name>spring-mvc</servlet-name>
